[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://New Piskel (7).png" type="Texture" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Coin.tscn" type="PackedScene" id=4]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 496.993, 418.272 )
scale = Vector2( 4.11226, 3.4113 )
texture = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="Coin" parent="." instance=ExtResource( 4 )]
position = Vector2( 852.217, 138.962 )

[node name="CoinPooperOuter" type="Timer" parent="."]

[node name="Bomb spawner" type="Timer" parent="."]
[connection signal="timeout" from="CoinPooperOuter" to="." method="_on_CoinPooperOuter_timeout"]
[connection signal="timeout" from="Bomb spawner" to="." method="_on_Bomb_spawner_timeout"]
